# SystemConfigs

./: README.md  pyproject.toml  setup_routine.py
config-profiles/: arch-x11.toml
configs/editors/zed/: .gitignore  keymap.json
configs/extras/arch-x11/: README.md  mouse-workspace-buttons.xbindkeysrc  xfce-session.service  xfce-theme-toggle
configs/extras/pc/: path-aliases.sh
configs/rules/: README.md
configs/rules/code/: README.md  asgard.md  bash.md  naming.md
configs/rules/code/python/: classes.md  docs.md  errors.md  functions.md  layout.md  naming.md  setup-module.md  setup-project.md  testing.md
configs/rules/code/quokka/: gpu-safety.md  mhd-naming.md
configs/rules/dev/: README.md  naming.md
configs/rules/dev/python/: layout.md  naming.md
configs/rules/dev/quokka/: README.md  (+3 more)
configs/rules/workflow/: README.md  agent.md  git.md  science-project.md
configs/rules/writing/: README.md  docs.md  latex.md  manuscript.md  markdown.md  notes.md  science.md  teaching.md
configs/shell/common/: shell_aliases  shell_functions
configs/shell/zsh/: zshrc
configs/system/pc/: path-aliases.sh  ssh-agent.sh
editors/zed/: settings.json
editors/zed/settings/: editor.jsonc
extras/personal/: project-aliases.sh
plan/: config_plan.md  overview.md  registry.md
rules/dev/python/: classes.md  naming.md
rules/writing/: science.md
scripts/docs/: build_rules_pdf.py
scripts/setup/: editors.py  extras.py  rules.py  rules_files.py  rules_index.py  rules_map.py  shell.py  tools.py
scripts/setup/_extras/: arch_x11.py  config.py  hpc.py  macos.py  pc.py
scripts/tools/: add_ssh_key.py  ssh_add_key.py
setup/: editors.py  extra_config.py  extras.py  tools.py
setup/_extras/: arch_x11.py  config.py  hpc.py  macos.py  personal.py
setup/extras_data/: arch_x11.py  hpc.py  macos.py  personal.py
src/local_helpers/: apply_shell_actions.py  load_profiles.py  log_messages.py  project_dirs.py
utils/: apply_shell_actions.py  load_profiles.py  log_messages.py
(+57 files in other folders)
