[project]
name = "dotfiles"
version = "0.1.0"
description = "Personal dotfiles setup scripts and tracked configuration files."
readme = "README.md"
authors = [{ name = "Neco Kriel", email = "necokriel@gmail.com" }]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/local_helpers"]

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
]

[tool.pyright]
include = ["setup_routine.py", "scripts", "src/local_helpers"]
extraPaths = ["src"]

## --- rules to enforce
reportMissingImports = true
reportMissingTypeStubs = false  # third-party packages rarely ship stubs

## --- rules to suppress
reportImplicitStringConcatenation = "none"  # valid style for long error messages
reportUnusedCallResult = "none"  # setup helpers and argparse builders are called for side effects
